<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/item_benevit"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/card_size"
    android:layout_height="@dimen/card_size"
    android:layout_marginEnd="@dimen/normal_space"
    android:layout_marginBottom="@dimen/normal_space"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/benevit_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:id="@+id/topBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/small_space"
                android:background="@color/red_1"
                android:visibility="gone"
                >
                <ImageView
                    android:id="@+id/benevit_mini_logo"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/login_description_logo"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                     />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/benevit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/topBanner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/example_title"
                android:layout_marginTop="@dimen/small_space"
                android:layout_marginHorizontal="@dimen/small_space"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/benevit_vector"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/benevit_add"
                android:src="@drawable/familia"
                android:contentDescription="@string/login_description_family"
                android:visibility="gone"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/benevit_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_text_size"
                android:text="@string/add"

                app:layout_constraintTop_toBottomOf="@id/benevit_vector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="@dimen/normal_space"
                android:visibility="gone"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>