<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeView"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_1"
        android:padding="@dimen/small_space"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/toolbar_menu"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_menu"
                android:contentDescription="@string/description_menu_icon"
                android:layout_gravity="center_vertical"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/login_description_logo"
                android:layout_gravity="center"
                android:layout_weight="1"
                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        >
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shrimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <include layout="@layout/shimmer_placeholder_layout" />

        </com.facebook.shimmer.ShimmerFrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/normal_space"
            tools:listitem="@layout/item_wallet"
            >

        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/NAV_Menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:maxWidth="@dimen/navigation_max_width"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        android:background="@color/red_1"
        app:headerLayout="@layout/side_nav_header"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navmenu_title_logout"
                android:textColor="@color/white"
                android:textStyle="bold"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/normal_space"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
